# novelagent

./: .gitignore  AGENTS.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.codex/agents/: README.md  canon_agent.md  check_agent.md  context_agent.md  contract_agent.md  creation_agent.md  director.md  front_agent.md  graph_agent.md  main_agent.md  qa_agent.md  review_agent.md  writing_agent.md
.codex/coordination/: README.md  blockers.md  board.md  branches.md  decisions.md  handoffs.md
apps/api/: desktop.py  desktop_server.py  main.py
apps/cli/: __init__.py  main.py
apps/desktop/: .gitignore  README.md  package-lock.json  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/web/: index.html  package-lock.json  package.json
contracts/: candidate_fact_v1.md  context_pack_v1.md  continuity_report_v1.md  graph_store_v1.md  proposal_artifact_v1.md  review_payload_v1.md  style_sample_store_v1.md  workflow_run_v1.md
docs/: architecture.md
examples/fantasy_project/: README.md
storygraph/: __init__.py  demo.py
storygraph/core/: __init__.py  agent_config.py  config.py  errors.py  ids.py  time.py
storygraph/localization/: __init__.py  (+2 more)
tests/: test_api_agent_discussion.py  test_api_agent_settings.py  test_api_canon_seed.py  test_api_graph_query.py  test_api_project_structure.py  test_api_proposals.py  test_api_review.py  test_api_style_samples.py  test_api_workflow_runs.py  test_candidate_store.py  test_cli_review.py  test_cli_task12.py  test_context_pack.py  test_continuity_checker.py  test_create_node_candidate.py  test_demo_localization.py  test_desktop_api_entrypoint.py  test_graph_backend_config.py  test_graph_neo4j.py  test_graph_neo4j_integration.py  test_graph_query_service.py  test_graph_store.py  test_llm_provider.py  test_proposal_store.py  test_review_service.py  test_scene_writer_llm.py  test_style_sample_store.py  test_version_consistency.py  test_workflow.py  test_workflow_langgraph.py  test_workflow_store.py
(+56 files in other folders)
