[project]
name = "storygraph-agent"
version = "0.1.6"
description = "Canon-safe long-form fiction writing engine backed by structured story graph contracts."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "pydantic>=2.7",
  "typer>=0.12",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]
neo4j = [
  "neo4j>=5.20",
]
langgraph = [
  "langgraph>=0.2",
  "langgraph-checkpoint-sqlite>=3.1",
]

[project.scripts]
storygraph = "apps.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
include = ["apps*", "storygraph*"]
exclude = ["contracts*", "docs*", "examples*", "tests*"]

[tool.setuptools.package-data]
storygraph = ["prompts/*.md", "localization/*.json"]
