[package]
name = "storygraph-agent-desktop"
version = "0.1.5"
description = "StoryGraph Agent 桌面壳"
authors = ["StoryGraph Agent"]
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "=2.11.3", features = ["tray-icon"] }
tauri-plugin-updater = "=2.10.1"
